# Mix-Saving-Bot

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  bot.py  docker-compose.yml  pyproject.toml  requirements.txt  run_bot.py
bot/: __init__.py  app.py  formatters.py  keyboards.py  notifier.py  pending_choice.py
bot/middleware/: logging_mw.py  rate_limit.py
bot/routers/: __init__.py  download.py
core/: __init__.py  logging_setup.py  observability.py  settings.py
core/contracts/: __init__.py  errors.py  types.py
downloader/: __init__.py  _sync_engine.py  protocols.py  sanitize.py  yt_dlp_downloader.py
services/: __init__.py  __main__.py  dedupe_cache.py  downloader.py  logging_config.py  pipeline.py  queue_manager.py  remote_backend.py  types.py  worker.py  worker_runner.py  yt-dlp.conf
services/cache/: __init__.py  file_cache.py  protocols.py
services/jobs/: __init__.py  model.py  repository.py  service.py  terminal_waiter.py
services/queue/: __init__.py  memory_queue.py  protocols.py  (+1 more)
tests/: conftest.py  test_bot_middleware.py  test_dedupe_cache.py  test_dispatcher_smoke.py  test_file_cache.py  test_formatters.py  test_job_repository_and_service.py  test_jobs_model.py  test_keyboards.py  test_logging_setup.py  test_memory_queue.py  test_metrics.py  test_notifier.py  test_pending_choice.py  test_pipeline.py  test_queue_manager.py  test_redis_queue_message.py  test_sanitize.py  test_services_worker.py  test_settings.py  test_sync_engine_unit.py  test_terminal_waiter.py  test_worker_runner.py  test_yt_dlp_facade.py
